# BallKnowledge

./: CMakeLists.txt  CMakePresets.json
src/: Notification.cpp  Notification.h  apiClient.cpp  apiClient.h  fixtures.json  main.cpp  matchMonitor.cpp  matchMonitor.h  response.json  tmp.cpp
